pkg/xds/generator/testdata/dns/1-envoy-config.golden.yaml
resources:
- name: kuma:dns
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 53001
        protocol: UDP
    listenerFilters:
    - name: envoy.filters.udp.dns_filter
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.udp.dns_filter.v3.DnsFilterConfig
        serverConfig:
          inlineDnsTable:
            virtualDomains:
            - answerTtl: 30s
              endpoint:
                addressList:
                  address:
                  - 240.0.0.0
                  - ::ffff:f000:0
              name: backend.test-ns.svc.8080.mesh
            - answerTtl: 30s
              endpoint:
                addressList:
                  address:
                  - 240.0.0.0
                  - ::ffff:f000:0
              name: backend_test-ns_svc_8080.mesh
            - answerTtl: 30s
              endpoint:
                addressList:
                  address:
                  - 240.0.0.1
                  - ::ffff:f000:1
              name: httpbin.mesh
        statPrefix: kuma_dns
    name: kuma:dns
    trafficDirection: INBOUND
