pkg/xds/generator/testdata/dns/3-dataplane.input.yaml
networking:
  address: 172.0.0.1
  outbound:
    - port: 80
      address: 240.0.0.0
      backendRef:
        kind: MeshService
        name: backend
        port: 8080
    - port: 80
      address: 240.0.0.1
      backendRef:
        kind: MeshService
        name: httpbin
        port: 80
