pkg/xds/generator/testdata/dns/4-envoy-config.golden.yaml
resources:
- name: system_dynamicconfig
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      pipe:
        path: kuma-mesh-metric-config.sock
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            maxDirectResponseBodySizeBytes: 353
            virtualHosts:
            - domains:
              - '*'
              name: system_dynamicconfig
              routes:
              - directResponse:
                  status: 304
                match:
                  headers:
                  - name: If-None-Match
                    stringMatch:
                      exact: 3a7819834364a9832e4a7b58cf52f72bc5b33bb1766e86dfd5cfe5afab562693
                  path: /dns
                name: system_dynamicconfig_dns_not_modified
              - directResponse:
                  body:
                    inlineString: '{"records":[{"name":"backend.test-ns.svc.8080.mesh","ips":["240.0.0.0","::ffff:f000:0"]},{"name":"backend_test-ns_svc_8080.mesh","ips":["240.0.0.0","::ffff:f000:0"]},{"name":"httpbin.mesh","ips":["240.0.0.1","::ffff:f000:1"]}],"ttl":30,"extraLabels":{"k8s_kuma_io_namespace":"test-ns","kuma_io_zone":"zone-1","kuma_workload":"backend","mesh":"default"}}'
                  status: 200
                match:
                  path: /dns
                name: system_dynamicconfig_dns
                responseHeadersToAdd:
                - header:
                    key: Etag
                    value: 3a7819834364a9832e4a7b58cf52f72bc5b33bb1766e86dfd5cfe5afab562693
          statPrefix: system_dynamicconfig
    name: system_dynamicconfig
    statPrefix: system_dynamicconfig
