pkg/xds/generator/testdata/dns/5-dataplane.input.yaml
networking:
  address: 172.19.0.11
  inbound:
    - port: 8080
      servicePort: 8080
      tags:
        kuma.io/service: backend
  outbound:
    - port: 80
      address: 240.0.0.0
      tags:
        kuma.io/service: backend_test-ns_svc_8080
    - port: 80
      address: 240.0.0.1
      tags:
        kuma.io/service: httpbin
  transparentProxying:
    redirectPortOutbound: 15001
    redirectPortInbound: 15003
