pkg/xds/generator/testdata/dns/5-envoy-config.golden.yaml
resources:
- name: system_dynamicconfig
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      pipe:
        path: kuma-mesh-metric-config.sock
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            maxDirectResponseBodySizeBytes: 236
            virtualHosts:
            - domains:
              - '*'
              name: system_dynamicconfig
              routes:
              - directResponse:
                  status: 304
                match:
                  headers:
                  - name: If-None-Match
                    stringMatch:
                      exact: 639772d25f9c22e338f3c54ebe8be0faeae7e30c57f1acbf2d8ba5eb191007fb
                  path: /dns
                name: system_dynamicconfig_dns_not_modified
              - directResponse:
                  body:
                    inlineString: '{"records":[{"name":"backend.test-ns.svc.8080.mesh","ips":["240.0.0.0","::ffff:f000:0"]},{"name":"backend_test-ns_svc_8080.mesh","ips":["240.0.0.0","::ffff:f000:0"]},{"name":"httpbin.mesh","ips":["240.0.0.1","::ffff:f000:1"]}],"ttl":30}'
                  status: 200
                match:
                  path: /dns
                name: system_dynamicconfig_dns
                responseHeadersToAdd:
                - header:
                    key: Etag
                    value: 639772d25f9c22e338f3c54ebe8be0faeae7e30c57f1acbf2d8ba5eb191007fb
          statPrefix: system_dynamicconfig
    name: system_dynamicconfig
