pkg/xds/generator/testdata/dns/7-envoy-config.golden.yaml
resources:
- name: _kuma:metrics:hijacker
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    altStatName: _kuma_metrics_hijacker
    connectTimeout: 5s
    loadAssignment:
      clusterName: _kuma:metrics:hijacker
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              pipe:
                path: kuma-mh-side-car-.sock
    name: _kuma:metrics:hijacker
    type: STATIC
- name: _kuma:dynamicconfig
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      pipe:
        path: kuma-mesh-metric-config.sock
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
            - addressPrefix: ::1
              prefixLen: 128
          routeConfig:
            maxDirectResponseBodySizeBytes: 505
            virtualHosts:
            - domains:
              - '*'
              name: _kuma:dynamicconfig
              routes:
              - directResponse:
                  status: 304
                match:
                  headers:
                  - name: If-None-Match
                    stringMatch:
                      exact: 639772d25f9c22e338f3c54ebe8be0faeae7e30c57f1acbf2d8ba5eb191007fb
                  path: /dns
              - directResponse:
                  body:
                    inlineString: '{"records":[{"name":"backend.test-ns.svc.8080.mesh","ips":["240.0.0.0","::ffff:f000:0"]},{"name":"backend_test-ns_svc_8080.mesh","ips":["240.0.0.0","::ffff:f000:0"]},{"name":"httpbin.mesh","ips":["240.0.0.1","::ffff:f000:1"]}],"ttl":30}'
                  status: 200
                match:
                  path: /dns
                name: _kuma:dynamicconfig:/dns
                responseHeadersToAdd:
                - header:
                    key: Etag
                    value: 639772d25f9c22e338f3c54ebe8be0faeae7e30c57f1acbf2d8ba5eb191007fb
              - directResponse:
                  status: 304
                match:
                  headers:
                  - name: If-None-Match
                    stringMatch:
                      exact: 385b16329ac07fc4fd859a249a471e20a6c9f594896933deb2a699f4a3d1ac59
                  path: /meshmetric
              - directResponse:
                  body:
                    inlineString: '{"observability":{"metrics":{"applications":[{"path":"/metrics","port":8080,"address":""}],"backends":[{"type":"Prometheus","name":null}],"sidecar":{"includeUnused":false},"extraLabels":{"kuma_io_service":"backend","kuma_io_services":",backend,"}}}}'
                  status: 200
                match:
                  path: /meshmetric
                name: _kuma:dynamicconfig:/meshmetric
                responseHeadersToAdd:
                - header:
                    key: Etag
                    value: 385b16329ac07fc4fd859a249a471e20a6c9f594896933deb2a699f4a3d1ac59
          statPrefix: _kuma_dynamicconfig
    name: _kuma:dynamicconfig
- name: _kuma:metrics:prometheus:default-backend
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 172.19.0.11
        portValue: 5670
    enableReusePort: false
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
            - addressPrefix: ::1
              prefixLen: 128
          routeConfig:
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: _kuma:metrics:prometheus:default-backend
              routes:
              - match:
                  prefix: /metrics
                route:
                  cluster: _kuma:metrics:hijacker
                  prefixRewrite: /meshmetric
          statPrefix: _kuma_metrics_prometheus_default-backend
    name: _kuma:metrics:prometheus:default-backend
    trafficDirection: INBOUND
